--- a/santongding_hello/ta/Makefile
+++ b/santongding_hello/ta/Makefile
@@ -1,8 +1,9 @@
-# CFG_TEE_TA_LOG_LEVEL ?= 4
+CFG_TEE_TA_LOG_LEVEL ?= 4
 
 # The UUID for the Trusted Application
 BINARY=94290c06-2720-47dc-a00b-298c7ae3e197
 
+CFG_TA_MCOUNT=y
 -include $(TA_DEV_KIT_DIR)/mk/ta_dev_kit.mk
 
 ifeq ($(wildcard $(TA_DEV_KIT_DIR)/mk/ta_dev_kit.mk), )
